--- a/cometride-server/src/main/webapp/admin.html
+++ b/cometride-server/src/main/webapp/admin.html
@@ -330,10 +330,10 @@
         <!-- /.container-fluid -->
     </nav>
     <!-- Messages -->
-    <!-- <div class="alert alert-warning alert-dismissible" role="alert">
+    <div id="createSuccess" class="alert alert-success alert-dismissible" role="alert">
         <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <strong>Warning!</strong> Better check yourself, you're not looking too good.
-    </div> -->
+        <strong>Success!</strong> Route is saved.
+    </div>
     <!-- Map Canvas -->
     <div id="container">
         <div id="map-canvas"></div>
