--- a/cometride-server/src/main/webapp/report.html
+++ b/cometride-server/src/main/webapp/report.html
@@ -8,16 +8,15 @@
     <!-- plugin css -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-    <!--     <link href="css/jquery.dynatable.css" rel="stylesheet">
- -->
-    <!-- custom css -->
+<!--     <link href="css/jquery.dynatable.css" rel="stylesheet">
+ -->    <!-- custom css -->
     <link href="css/report.css" rel="stylesheet">
     <!-- plugin js -->
     <script src="//code.jquery.com/jquery-1.10.2.js"></script>
     <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
     <script src="js/jquery.table2excel.js"></script>
-    <!--<script src="js/jquery.dynatable.js"></script>-->
+    <script src="js/jquery.dynatable.js"></script>
     <!-- custom js -->
     <script src='js/report.js'></script>
 </head>
