--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
     <div id="content-wrapper">
       <div class="inner clearfix">
         <section id="main-content">
-          <p>CometRide is a transportation tracking app designed for the UTDallas graduate software project under <a href="http://www.utdallas.edu/%7Ermili/">Dr. Rym Zalila-Wenkstern</a>.</p>
+          <p>CometRide is a transportation tracking app designed for the UTDallas graduate software project under <a href="http://www.utdallas.edu/%7Ermili/">Dr. Rym Zalila-Wenkstern</a>. The solution consists of two Android applications for drivers and riders in combination with a web page that supports cross platform compatibility for some rider features and admin management capabilities.</p>
 
-<p>The solution consists of two Android applications for drivers and riders in combination with a web page that supports cross platform compatibility for some rider features and admin management capabilities. The server and web page is hosted from a Java web application hosted in a Tomcat server supported by a MySQL database for storage.</p>
+          <p>The server and web page were deployed to AWS with a Java web application in a Tomcat server supported by a MySQL database.</p>
         </section>
 
         <aside id="sidebar">
