--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <section id="main-content">
           <p>CometRide is a transportation tracking app designed for the UTDallas graduate software project under <a href="http://www.utdallas.edu/%7Ermili/">Dr. Rym Zalila-Wenkstern</a>. The solution consists of two Android applications for drivers and riders in combination with a web page that supports cross platform compatibility for some rider features and admin management capabilities.</p>
 
-          <p>The server and web page were deployed to AWS with a Java web application in a Tomcat server supported by a MySQL database.</p>
+          <p>Check out an overview here: <a href="https://www.youtube.com/watch?v=tRzOz5yEsnc">CometRide Overview</a></p>
         </section>
 
         <aside id="sidebar">
